--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ appdirs==1.4.3
 dj-database-url==0.4.2
 Django==1.10.6
 django-filter==0.14.0
+django-geoposition==0.3.0
+django-grappelli==2.9.1
 django-hashid-field==1.2.1
 flake8==3.3.0
 graphene==1.2
@@ -12,7 +14,9 @@ gunicorn==19.7.1
 hashids==1.2.0
 iso8601==0.1.11
 mccabe==0.6.1
+olefile==0.44
 packaging==16.8
+Pillow==4.0.0
 promise==1.0.1
 psycopg2==2.7.1
 pycodestyle==2.3.1
