--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+cloudinary==1.7.0
 dj-database-url==0.4.2
 Django==1.10.6
 django-filter==0.14.0
@@ -19,11 +20,14 @@ packaging==16.8
 Pillow==4.0.0
 promise==1.0.1
 psycopg2==2.7.1
+pyasn1==0.2.3
 pycodestyle==2.3.1
+pycrypto==2.6.1
 pyflakes==1.5.0
 pyparsing==2.2.0
 python-env==1.0.0
 singledispatch==3.4.0.3
 six==1.10.0
 typing==3.5.3.0
+urllib3==1.20
 whitenoise==3.3.0
